--- a/css/style.css
+++ b/css/style.css
@@ -215,13 +215,15 @@ header .icons a:hover {
     border-radius: 5px;
 }
 .fa{
+    width: 40px;
+    height: 40px;
     font-size: 20px;
     font-weight: 05;
     padding: 5px;
     border-radius: 50px;
     
 }
-.fa-facebook-f:hover {
+.fa-facebook:hover {
     color: #0051ff;
 }
 
