--- a/css/style.css
+++ b/css/style.css
@@ -495,3 +495,53 @@ footer{
     color: orangered;
     font-size: 2rem;
 }
+#contact {
+    text-align: center;
+    display: block;
+}
+#twitter,
+#facebook,
+#LinkedIn,
+#youtube,
+#whatsapp,
+#telegram,
+#google{
+    font-size: 2em;
+    box-shadow: 2px 2px 2px #00000008,10px 1px 12px #00000008,
+    2px 2px 10px #00000008,2px 2px 3px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008,inset 2px 2px 10px #00000008;
+    
+    border-radius: 29px;
+    padding: 11px 19px;
+    margin: 0 20px;
+    animation: animate 3s linear infinite;
+    text-shadow: 0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff;
+}
+#twitter{
+    animation-delay: 0.1s;
+}
+#facebook {
+    animation-delay: 0.2s;
+}
+#LinkedIn{
+    animation-delay: 0.3s;
+}
+#youtube{
+    animation-delay: 0.4s;
+}
+#whatsapp{
+    animation-delay: 0.5s;
+}
+#telegram{
+    animation-delay: 0.6s;
+}
+#google{
+    animation-delay: 0.7s;
+}
+@keyframes animate{
+    from {
+    filter: hue-rotate(0deg);
+}
+to {
+    filter: hue-rotate(360deg);
+}
+}
