--- a/css/style.css
+++ b/css/style.css
@@ -517,25 +517,25 @@ footer{
     text-shadow: 0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff,0 0 50px #0072ff;
 }
 #twitter{
-    animation-delay: 0.1s;
+    animation-delay: 0.5s;
 }
 #facebook {
-    animation-delay: 0.2s;
+    animation-delay: 0.7s;
 }
 #LinkedIn{
-    animation-delay: 0.3s;
+    animation-delay: 0.5s;
 }
 #youtube{
     animation-delay: 0.4s;
 }
 #whatsapp{
-    animation-delay: 0.5s;
+    animation-delay: 0.1s;
 }
 #telegram{
-    animation-delay: 0.6s;
+    animation-delay: 0.3s;
 }
 #google{
-    animation-delay: 0.7s;
+    animation-delay: 0.2s;
 }
 @keyframes animate{
     from {
@@ -544,4 +544,109 @@ footer{
 to {
     filter: hue-rotate(360deg);
 }
+}
+body.dark-mode {
+    background-color: #1a1a1a;
+    color: #e6e6e6;
+}
+
+body.bright-mode {
+    background-color: #ffffff;
+    color: #333333;
+}
+#dark-icon {
+    display: none;
+}
+.modal {
+    display: none;
+    /* Hidden by default */
+    /*position: fixed;*/
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    padding-top: 50px;
+   /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 50%;
+    /* Full width */
+    height: 50%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s;
+}
+
+/* Add Animation */
+/* @-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0;
+        opacity: 1;
+    }
+} */
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+
+    background-color: #5cb85c;
+    color: white;
+}
+
+.modal-body {
+    padding: 2px 16px;
+}
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
 }
